# exifsort

./: .gitignore  CMakeLists.txt  Makefile  exifsort.c
